update to valur prop and services sectioon homepage

--- a/docs/themes/thxvscode/layouts/_default/home.html
+++ b/docs/themes/thxvscode/layouts/_default/home.html
@@ -21,13 +21,24 @@
                         <div class="availableServices">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-sm-6 col-xs-12 no-gutters">
-                                            <span>Azure Fluid Relay</span>
-                                            <div><p>https://azure.microsoft.com/en-us/products/fluid-relay/#overview</p></div>
+                                    <div class="col-md-6 no-gutters">
+                                            <span><b>Azure Fluid Relay</b></span>
+                                            <div>
+                                                <p>Azure Fluid Relay is a cloud service that enables real-time collaboration on shared data models. It is a fully managed service that provides a secure, scalable, and reliable way to connect clients to each other and to the data models they share. It is designed to be used with the Fluid Framework, but can also be used with other collaborative frameworks.</p>
+                                            </div>
+                                            <div>
+                                                <a href="https://azure.microsoft.com/en-us/products/fluid-relay/#overview">Learn more...</a>
+                                            </div>
                                     </div>
-                                    <div class="col-sm-6 col-xs-12 no-gutters">
-                                            <span>Sharepoint Embeeded</span>
-                                    </div>
+                                    <div class="col-md-6 no-gutters">
+                                            <span><b>Sharepoint Embeeded</b></span>
+                                            <div>
+                                                <p>Microsoft SharePoint Embedded is a cloud-based file and document management system suitable for use in any application. SharePoint Embedded is a new API-only solution which enables app developers to harness the power of the Microsoft 365 file and document storage platform for any app, and is suitable for enterprises building line of business applications and ISVs building multi-tenant applications.</p>
+                                            </div>
+                                            <div>
+                                                <a href="https://learn.microsoft.com/en-us/sharepoint/dev/embedded/overview">Learn more...</a>
+                                            </div>
+                                        </div>
                                 </div>
                             </div>
                         </div>
