--- a/docs/layouts/shortcodes/apiref.html
+++ b/docs/layouts/shortcodes/apiref.html
@@ -12,8 +12,9 @@
 
 {{- $fileNameWithoutExtension := lower (delimit (slice $name $kind) "-") -}}
 {{- $fileName := delimit (slice $fileNameWithoutExtension ".md") "" -}}
-
-{{- $path := delimit (slice "/docs/api/v1/" $unscopedPackageName "/" $fileName) "" -}}
+{{- $currentVersion := $.Site.Data.versions.currentVersion -}}
+{{- $apiLink := print "/docs/api/" $currentVersion "/" -}}
+{{- $path := delimit (slice $apiLink $unscopedPackageName "/" $fileName) "" -}}
 
 <a href="{{ relref . $path }}"><code>{{ $name }}</code></a>
 
