bug fix(docs): v2 breadcrump wrong links

--- a/docs/themes/thxvscode/layouts/partials/breadcrumb.html
+++ b/docs/themes/thxvscode/layouts/partials/breadcrumb.html
@@ -62,10 +62,10 @@
   {{ if $packageDisplayName }}
     <p>
       <a href="/docs/api/v1" onclick="return false;">{{ humanize $concept | title }}</a> <!-- TODO: remove onclick and create proper link to new concept readme -->
-        {{ $packageLink := print "/docs/api/v1/" $packageName "/" }}
+        {{ $packageLink := print "/docs/api/" $selectedApiVersion "/" $packageName "/" }}
         &gt; <a href="{{ $packageLink }}">{{ $packageDisplayName }}</a>
       {{ if $leafNodeFound }}
-        {{ $itemLink := print "/docs/api/v1/" $packageName "/" $leafSegment }}
+        {{ $itemLink := print "/docs/api/" $selectedApiVersion "/" $packageName "/" $leafSegment "/" }}
         &gt; <a href="{{ $itemLink }}">{{ $leafNodeWithCapitalization }}</a>
       {{ end }}
     </p>
