--- a/docs/themes/thxvscode/assets/scss/includes/_docs.scss
+++ b/docs/themes/thxvscode/assets/scss/includes/_docs.scss
@@ -201,8 +201,16 @@
 		}
 	}
 
-	.docs-home {
-		padding-bottom: 16px;
+	.padding-35px {
+		padding: 5px 35px;
+	}
+
+	.padding-45px {
+		padding: 5px 45px;
+	}
+
+	.padding-55px {
+		padding: 5px 55px;
 	}
 
 	> li > .area {
@@ -239,6 +247,9 @@
 				&:hover {
 					background-image: url("/expand-up.svg");
 				}
+				&.nav-page {
+						background-image: none;
+				}
 			}
 		}
 	
@@ -246,6 +257,9 @@
 			a, div {
 				&:hover {
 					background-image: url("/expand-down.svg");
+				}
+				&.nav-page {
+						background-image: none;
 				}
 			}
 		}
